src/objects/ACED_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Actual_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Activity Actual Cost</inlineHelpText>
        <label>Activity Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Actual Cost</inlineHelpText>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Name_F__c</fullName>
        <formula>IF(Is_Regional_Asset__c = false, IF(Channel__c != null , Channel__r.Actual_Attribute_F__c, null), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a helptext for Actual Name</inlineHelpText>
        <label>Actual Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Actual Value</inlineHelpText>
        <label>Actual Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <inlineHelpText>This is a helptext for Affiliate</inlineHelpText>
        <label>Affiliate</label>
        <picklist>
            <controllingField>HUB__c</controllingField>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus &amp; Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macedonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montengro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alive_Since__c</fullName>
        <inlineHelpText>This is a helptext for Alive Since</inlineHelpText>
        <label>Alive Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Activity_Actual_Cost__c</fullName>
        <formula>Actual_Cost__c + Activity_Actual_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a helptext for Asset+Activity Actual Cost</inlineHelpText>
        <label>Asset+Activity Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Indications__c</fullName>
        <inlineHelpText>This is a helptext for #Asset Indications</inlineHelpText>
        <label>#Asset Indications</label>
        <summaryForeignKey>ACED_Asset_Indication__c.Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <inlineHelpText>This is a helptext for Business Function</inlineHelpText>
        <label>Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is a helptext for Channel</inlineHelpText>
        <label>Channel</label>
        <referenceTo>ACED_Channel__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_per_eInteraction_F__c</fullName>
        <formula>IF( Total_eInteractions__c &lt;&gt;0, (Asset_Activity_Actual_Cost__c) / Total_eInteractions__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per eInteraction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUB__c</fullName>
        <inlineHelpText>This is a helptext for HUB</inlineHelpText>
        <label>HUB</label>
        <picklist>
            <picklistValues>
                <fullName>ACE HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK HUB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Regional_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a helptext for Is Regional Asset</inlineHelpText>
        <label>Is Regional Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>This is a helptext for Language</inlineHelpText>
        <label>Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Review__c</fullName>
        <inlineHelpText>This is a helptext for Last Review</inlineHelpText>
        <label>Last Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_url__c</fullName>
        <inlineHelpText>This is a helptext for Location / url</inlineHelpText>
        <label>Location / url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>My_Assets__c</fullName>
        <formula>TEXT(HUB__c) = TEXT( $User.ACED_HUB__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Review__c</fullName>
        <inlineHelpText>This is a helptext for Next Review</inlineHelpText>
        <label>Next Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a helptext for No Activities.
Indicates whether the asset is used in any activities.</inlineHelpText>
        <label>No Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Description__c</fullName>
        <inlineHelpText>This is a helptext for Notes / Description</inlineHelpText>
        <label>Notes / Description</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Description__c</fullName>
        <inlineHelpText>This is a helptext for Owner Description</inlineHelpText>
        <label>Owner Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Name_F__c</fullName>
        <formula>IF(Is_Regional_Asset__c = false, IF(Channel__c != null , Channel__r.Potential_Attribute_F__c, null), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a helptext for Potential Name</inlineHelpText>
        <label>Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Potential Value</inlineHelpText>
        <label>Potential Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is a helptext for ProfileId</inlineHelpText>
        <label>ProfileId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Regional_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is self lookup to assign children Asset records to a Regional Asset.</description>
        <inlineHelpText>This is a helptext for Regional Asset</inlineHelpText>
        <label>Regional Asset</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>You cannot add a &apos;Retired&apos; Regional Asset as a parent to a Regional asset record</errorMessage>
            <filterItems>
                <field>ACED_Asset__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Retired</value>
            </filterItems>
            <filterItems>
                <field>ACED_Asset__c.Is_Regional_Asset__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.ACED_HUB__c</field>
                <operation>equals</operation>
                <value>ACE HUB</value>
            </filterItems>
            <infoMessage>Regional Assets belonging to your HUB will be displayed in this Page</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACED_Asset__c</referenceTo>
        <relationshipLabel>Related Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retirement_Date__c</fullName>
        <inlineHelpText>This is a helptext for Retirement Date</inlineHelpText>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>This is a helptext for Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <inlineHelpText>This is a helptext for Target Type</inlineHelpText>
        <label>Target Type</label>
        <picklist>
            <picklistValues>
                <fullName>HCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-HCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <inlineHelpText>This is a helptext for Therapeutic Area</inlineHelpText>
        <label>Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoimmune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Men&apos;s Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuroscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross TAs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Party_Collabration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a helptext for Third Party Collabration</inlineHelpText>
        <label>Third Party Collabration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Be_Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Retired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Effort__c</fullName>
        <description>Total effort on related Brand Indications</description>
        <label>#Total Effort</label>
        <summarizedField>ACED_Asset_Indication__c.Effort__c</summarizedField>
        <summaryForeignKey>ACED_Asset_Indication__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_eInteractions__c</fullName>
        <label>Total eInteractions</label>
        <summarizedField>ACED_Asset_Actual__c.Value__c</summarizedField>
        <summaryForeignKey>ACED_Asset_Actual__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>eInteractions_F__c</fullName>
        <description>This field is created as part of US-36249: 
Samples Scenarios: 
Asset Only (no Activities): 
Actual Cost = $10,000
Activity Actual Cost = $0
Asset+Activity Actual Cost = $10,000
any eInteractions = $10,000/# total eInteractions for the Asset</description>
        <formula>0</formula>
        <inlineHelpText>This is a helptext for eInteractions</inlineHelpText>
        <label>eInteractions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_eAsset__c</fullName>
        <formula>1</formula>
        <label># of eAsset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Asset_Activity_Actual_Cost__c</columns>
        <columns>Channel__c</columns>
        <columns>Is_Regional_Asset__c</columns>
        <columns>Regional_Asset__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Australia_HUB</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Asset_Activity_Actual_Cost__c</columns>
        <columns>Channel__c</columns>
        <columns>Is_Regional_Asset__c</columns>
        <columns>Regional_Asset__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
            <value>Australia HUB</value>
        </filters>
        <label>1. Australia HUB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Germany_HUB</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Asset_Activity_Actual_Cost__c</columns>
        <columns>Channel__c</columns>
        <columns>Is_Regional_Asset__c</columns>
        <columns>Regional_Asset__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
            <value>Germany HUB</value>
        </filters>
        <label>2. Germany HUB</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <recordTypes>
        <fullName>Non_Program_Asset</fullName>
        <active>true</active>
        <label>Non Program Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Asset</fullName>
        <active>true</active>
        <label>Program Asset</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACED_Regional_Asset_Selection</fullName>
        <active>true</active>
        <description>This validation rule prevents user from from selecting regional asset on an regional asset record.</description>
        <errorConditionFormula>AND(Is_Regional_Asset__c = TRUE , Regional_Asset__c &lt;&gt; NULL)</errorConditionFormula>
        <errorDisplayField>Regional_Asset__c</errorDisplayField>
        <errorMessage>You cannot select Parent Regional asset on an Regional asset record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotActivateAssetWithoutAliveDate</fullName>
        <active>true</active>
        <description>Asset cannot be activated without alive date</description>
        <errorConditionFormula>ISPICKVAL(Status__c  , &apos;Live&apos;) &amp;&amp;   ISBLANK( Alive_Since__c ) &amp;&amp;  (ISCHANGED(Status__c) || ISNEW())</errorConditionFormula>
        <errorDisplayField>Alive_Since__c</errorDisplayField>
        <errorMessage>Assets cannot be set to live status without entering Alive Since date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotCreateAssetNotInHub</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(HUB__c) != TExt($User.ACED_HUB__c) &amp;&amp; TEXT($User.ACED_HUB__c)!=&apos;ACE HUB&apos;</errorConditionFormula>
        <errorMessage>You can create/edit assets belonging to your own HUB only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Uncheck_ToBeRetired</fullName>
        <active>true</active>
        <description>This validation is make sure the To be retired flag is unchecked before flagging a asset to be retired</description>
        <errorConditionFormula>ISPICKVAL(Status__c, &apos;Retired&apos;) &amp;&amp;  To_Be_Retired__c</errorConditionFormula>
        <errorDisplayField>To_Be_Retired__c</errorDisplayField>
        <errorMessage>Please uncheck the &apos;To Be Retired&apos; checkbox before setting the status of the asset to &apos;Retired&apos;</errorMessage>
    </validationRules>
</CustomObject>